[tool.poetry]
name = "ellipse-rcnn"
version = "0.1.0"
description = "A PyTorch Implementation of Ellipse-RCNN"
authors = ["Wouter Doppenberg <wouterdoppenberg@gmail.com>"]
license = "MIT"
packages = [
    { include = "ellipse_rcnn" }
]

[tool.poetry.dependencies]
python = "^3.9"
torchvision = "^0.14.1"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
pytorch-lightning = "^1.6.1"
h5py = "^3.6.0"
torch = "^1.13.1"
torchmetrics = "^0.8.1"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.18.1"
poethepoet = "^0.10.0"
jupyter = "^1.0.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.11.0+cu113 torchvision==0.12.0+cu113 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
